--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "promptalchemy",
+  "homepage": "https://willbyers1.github.io/prompt-improver/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@google/generative-ai": "^1.34.0",
+    "gh-pages": "^6.3.0",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "@google/genai": "^1.34.0"
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
